--- a/styles.css
+++ b/styles.css
@@ -7,65 +7,149 @@
     font-weight: normal;
     box-sizing: border-box;
     font-family: 'Open Sans';
+}
 
+header {
+    display: flex;
+    position: relative;
+    z-index: 1;
+    padding: 4rem;
+    background-color: transparent; 
+    align-items: center;
+}
+
+.header-photo {
+    max-width: 400px;
+    position: relative;
+}
+
+.header-photo img {
+    width: 100%;
+    box-shadow: 0 0 10px black;
+    border-radius: .5rem;
+}
+
+.header-photo h1 {
+    text-align: center;
+    position: absolute;
+    bottom: 1rem;
+    width: 100%;
+    color: white;
+    font-size: 2rem;
+}
+
+header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(138, 138, 209);
+    transform: skewY(-10deg); 
+    z-index: -1;
+    transform-origin: top left;
+}
+
+.about-me {
+    background: white;
+    box-shadow: 0 0 8px gray;
+    padding: 1.5rem 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    border-radius: 0.3rem;
+}
+
+.about-me p {
+    line-height: 1.5rem;
+}
+
+.socials-container {
+    display: flex;
+    margin-left: auto;
+    gap: 1rem;
+}
+
+.socials-container a:hover {
+    transform: scale(1.1);
+    transition: .2s;
+}
+
+.socials-container img {
+    width: 80px;
+}
+
+main {
+    padding: 5rem;
+}
+
+.projects-container {
+    display: grid;
+    flex-wrap: wrap;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 2rem;
+}
+
+.project {
+    box-shadow: 0 0 4px black;
+}
+
+.project h3 {
+    padding: 8rem 0;
+    text-align: center;
+    background-color: rgb(96, 145, 96);
+}
+
+.project-details {
+    padding: 1rem;
+}
+
+footer {
+    background-color: rgb(138, 138, 209);
+    padding: 5rem;
+    display: flex;
+    gap: 5rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-container {
+    flex-direction: column;
+    display: flex;
+    gap: 1rem;
+}
+
+.footer-container .socials-container {
+    display: flex;
+    gap: 1rem;
+}
+
+.footer-container .socials-container a:hover {
+    transform: scale(1.1);
+    transition: .2s;
+}
+
+.footer-container .socials-container img {
+    width: 60px;
+}
+
+footer img {
+    width: 300px;
+    object-fit: cover;
+}
+
+@media screen and (max-width: 1200px) {
     header {
-        display: flex;
-        position: relative;
-        z-index: 1;
-        padding: 4rem;
-        background-color: transparent; 
-        align-items: center;
-
-        .header-photo {
-            width: 500px;
-            position: relative;
-
-
-            img {
-                width: 100%;
-            }
-
-            h1 {
-                text-align: center;
-                position: absolute;
-                bottom: 1rem;
-                width: 100%;
-                color: white;
-                font-size: 2rem;
-            }
-        }
-
-    }
-    
-    header::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: rgb(138, 138, 209);
-        transform: skewY(-10deg); 
-        z-index: -1;
-        transform-origin: top left;
-    }
-
-    .about-me {
-        background: white;
-        box-shadow: 0 0 4px gray;
-        padding: 1.5rem 1rem;
-        display: flex;
         flex-direction: column;
-        gap: 1.5rem;
+    }
 
-        p {
-            line-height: 1.5rem;
-        }
+    .projects-container {
+        grid-template-columns: 1fr;
+    }
 
-        .socials-container {
-            display: flex;
-            margin-left: auto;
-            gap: 1rem;
-        }
+    footer {
+        flex-direction: column;
+        align-items: center;
     }
 }
